--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<form action="/login" method="POST">
+<form action="/login" method="GET">
     <section>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
