--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
-    
+    <Main>
+        <section>
+            <p>Hallo!</p>
+        </section>
+    </Main>
 </body>
 </html>
