--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,30 @@
 <h1>Login</h1>
-<form action="/login" method="GET">
-    <section>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-    </section>
-    <section>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-    </section>
-    <button type="submit">Login</button>
-</form>
-<a href="/register">Register</a>
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+</head>
+
+<body>
+    <form action="/login" method="GET">
+        <section>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+        </section>
+        <section>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+        </section>
+        <button type="submit">Login</button>
+    </form>
+    <a href="/register">Register</a>
+</body>
+
+</html>
