--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,8 +15,8 @@
 <body>
     <form action="/login" method="GET">
         <section>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
+            <label for="name">Name</label>
+            <input type="name" id="name" name="name" required>
         </section>
         <section>
             <label for="password">Password</label>
