--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -12,19 +12,29 @@
 
 <body>
     <main>
-        <section><p>resultaten</p></section>
+
+
+        <div class="search">
+            <label for="site-search">Search site:</label>
+            <input type="search" name="" id="site-search" name="q">
+        </div>
+
+        <section class="resultaten">
+            <p>resultaten: 0</p>
+        </section>
 
         <section class="trainer_overzicht">
             <div class="trainer">
                 <img src="#" alt="#">
                 <h2>naam-trainer</h2>
                 <h3>locatie</h3>
-                <p>Ik ben Bert Beuningsma en ik ben al 10 jaar lang personal trainer. Ik werk vanuit discipline, dus geen mik mak in mijn trainingssessies.</p>
+                <p>Ik ben Bert Beuningsma en ik ben al 10 jaar lang personal trainer. Ik werk vanuit discipline, dus
+                    geen mik mak in mijn trainingssessies.</p>
             </div>
 
         </section>
     </main>
-    
+
 </body>
 
 </html>
