--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3,4 +3,23 @@
     margin: 0;
 }
 
+p {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main {
+    background-color: white;
+}
+
+
+
+
 
