css en js gelinkt

--- a/views/trendingworkouts.ejs
+++ b/views/trendingworkouts.ejs
@@ -6,8 +6,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="/stylesheets/navbar.css" />
     <link rel="stylesheet" href="/stylesheets/trendingworkouts.css" />
-    <script src="/scripts/index.js" async></script>
-    <script src="/scripts/Tredingworkouts.js" async></script>
   </head>
   <body>
     <header>
@@ -35,10 +33,7 @@
       <!--Main Body Content-->
       <article class="container">
         <video autoplay muted loop id="background-video">
-          <source
-            src="/fit-buddy/public/stylesheets/videos/Untitled-17.mp4"
-            type="video/mp4"
-          />
+          <source src="/stylesheets/videos/Untitled-17.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="fade-effect"></div>
@@ -197,4 +192,6 @@
     </main>
     <footer></footer>
   </body>
+  <script src="/stylesheets/scripts/index.js"></script>
+  <script src="/stylesheets/scripts/trendingworkouts.js"></script>
 </html>
