begin overzicht card

--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -14,7 +14,39 @@
     <main>
 
 
-        <div class="search">
+        <div class="card-container">
+            <img class="round" src="#" alt="gebruiker">
+            <h3>Naam gebruiker</h3>
+            <h4>Woonplaats</h4>
+            <p>ingevoerde tekst van de gebruiker...</p>
+            <button class="meer-info">Meer info</button>
+            <div class="skills">
+                <h5>skills</h5>
+                <ul>
+                    <li>calisthenics</li>
+                    <li>Kracht en conditie</li>
+                    <li>Revalidatie</li>
+                    <li>fitness</li>
+                    <li>yoga</li>
+                    <li>free weights</li>
+                </ul>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- <div class="search">
             <label for="site-search">Search site:</label>
             <input type="search" name="" id="site-search" name="q">
         </div>
@@ -32,7 +64,7 @@
                     geen mik mak in mijn trainingssessies.</p>
             </div>
 
-        </section>
+        </section> -->
     </main>
 
 </body>
