--- a/public/stylesheets/overzicht.css
+++ b/public/stylesheets/overzicht.css
@@ -1,16 +1,50 @@
-.trainer {
-    margin: 5em 3em 0em 4em;
-    padding-top: 10em;
+body {
+    background-color: red;
+    
+    /* alles in het midden krijgen */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    min-height: 100vh;
+    margin: 0;
+}
+
+h3 {
+    margin: 10px 0;
+}
+
+h5 {
+    margin: 5px 0;
+    text-transform: uppercase;
+}
+
+p {
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.card-container {
     background-color: gray;
-    border-radius: 0.5em;
+    border-radius: 10px;
+    box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
+    color: white;
+    padding: 30px;
+    width: 300px; 
+    max-width: 100%;
+    text-align: center;
 }
 
-.trainer h2 {
-    color: red;
-    margin-left: 1em;
-}
-
-.trainer h3 {
-    color: red;
-    margin-left: 1em;
+.card-container .round {
+    border: 2px solid black; 
+    background-color: rgb(30, 30, 30);
+    border-radius: 50%;
+    width: 100px; 
+    height: 100px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    color: white; 
 }
