--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -9,15 +9,30 @@ p {
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
-    color: red;
 }
 
 h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-main {
-    background-color: white;
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h4 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h5 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h6 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+li {
+    list-style-type: none;
 }
 
 
