Card (zonder design)

--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -23,15 +23,16 @@
             <div class="skills">
                 <h5>skills</h5>
                 <ul>
-                    <li>calisthenics</li>
-                    <li>Kracht en conditie</li>
+                    <li>Calisthenics</li>
+                    <li>Kracht en Conditie</li>
                     <li>Revalidatie</li>
-                    <li>fitness</li>
-                    <li>yoga</li>
-                    <li>free weights</li>
+                    <li>Fitness</li>
+                    <li>Yoga</li>
+                    <li>Free Weights</li>
                 </ul>
             </div>
         </div>
+
 
     </main>
 
