--- a/public/stylesheets/overzicht.css
+++ b/public/stylesheets/overzicht.css
@@ -28,10 +28,11 @@ p {
     border-radius: 10px;
     box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
     color: white;
-    padding: 30px;
     width: 300px; 
     max-width: 100%;
     text-align: center;
+    padding-top: 0.2em;
+    margin: 4em 0 4em 0;
 }
 
 .card-container .round {
@@ -45,6 +46,7 @@ p {
     justify-content: center;
     margin: 0 auto;
     color: white; 
+    margin-top: 3em;
 }
 
 .meer-info {
@@ -62,10 +64,14 @@ p {
     text-align: left;
     padding: 15px;
     margin-top: 30px;
+    border-radius: 10px;
 }
+
 
 .skills ul li {
     border: 1px solid rgb(105, 103, 103);
-    border-radius: 2px;
+    border-radius: 5px;
     display: inline-block;
+    margin: 0.3em 0.3em 0 0;
+    padding: 5px;
 }
