--- a/views/trendingworkouts.ejs
+++ b/views/trendingworkouts.ejs
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Trending Workouts</title>
+    <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/navbar.css" />
     <link rel="stylesheet" href="/stylesheets/trendingworkouts.css" />
   </head>
+  
   <body>
     <header>
       <!--HamBurger Icon-->
