--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+body {
+   background-image: linear-gradient(150deg, #545A9C, black);
+}
+
 p {
     font-family: Arial, Helvetica, sans-serif;
 }
