Cards nasat elkaar

--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -8,7 +8,72 @@
     <title>Trainer Overzicht</title>
     <link rel="stylesheet" href="/stylesheets/overzicht.css">
     <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/navbar.css" />
+    <link rel="stylesheet" href="/stylesheets/navbar.css">
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        h3 {
+            margin: 10px 0;
+        }
+
+        h5 {
+            margin: 5px 0;
+            text-transform: uppercase;
+        }
+
+        p {
+            font-size: 14px;
+            line-height: 21px;
+        }
+
+        .card-container {
+            background-color: gray;
+            border-radius: 10px;
+            box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
+            color: white;
+            padding-top: 30px;
+            max-width: 300px;
+            text-align: center;
+            margin-bottom: 1em;
+        }
+
+        .card-container .round {
+            border: 2px solid black;
+            background-color: rgb(30, 30, 30);
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto;
+            color: white;
+        }
+
+        @media screen and (min-width: 770px) {
+            main {
+                margin-top: 3em;
+                display: flex;
+                flex-wrap: wrap;
+                gap: 3em;
+            }
+
+            .card-container {
+                flex: 1 1 calc(25% - 3em);
+            }
+
+            .card-container:nth-child(n+5) {
+                flex-basis: 100%;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -16,42 +81,124 @@
     <header>
         <!--HamBurger Icon-->
         <div class="bars" id="nav-action">
-          <span class="bar"> </span>
+            <span class="bar"> </span>
         </div>
-  
+
         <!--Navbar Links-->
         <nav id="nav">
-          <ul class="navlist">
-            <li class="shape-circle circle-one"><a href="#">Plan Maken</a></li>
-            <li class="shape-circle circle-two">
-              <a href="#">Trending Workouts</a>
-            </li>
-            <li class="shape-circle circle-three"><a href="#">Over Ons</a></li>
-            <li class="shape-circle circle-five">
-              <a href="#">Home</a>
-            </li>
-          </ul>
+            <ul class="navlist">
+                <li class="shape-circle circle-one"><a href="#">Plan Maken</a></li>
+                <li class="shape-circle circle-two">
+                    <a href="#">Trending Workouts</a>
+                </li>
+                <li class="shape-circle circle-three"><a href="#">Over Ons</a></li>
+                <li class="shape-circle circle-five">
+                    <a href="#">Home</a>
+                </li>
+            </ul>
         </nav>
-      </header>
+    </header>
 
     <main>
-
-
-        <form action="./search/">
-            <label for="gebruiker">Zoek een gebruiker</label>
-            <input type="search" id="gebruiker" name="q" />
-            <button type="submit">Search</button>
-          </form>
-        </search>
+        <div class="card-container">
+            <img class="round" src="#" alt="gebruiker">
+            <h3>username</h3>
+            <h4>woonplaats</h4>
+            <p>ingevoerde tekst van de gebruiker...</p>
+            <button class="meer-info">Meer info</button>
+            <div class="skills">
+                <h5>skills</h5>
+                <ul>
+                    <li>Calisthenics</li>
+                    <li>Kracht en Conditie</li>
+                    <li>Revalidatie</li>
+                    <li>Fitness</li>
+                    <li>Yoga</li>
+                    <li>Free Weights</li>
+                </ul>
+            </div>
+        </div>
 
         <div class="card-container">
             <img class="round" src="#" alt="gebruiker">
-            <h3>
-               username
-            </h3>
-            <h4>
-                woonplaats
-            </h4>
+            <h3>username</h3>
+            <h4>woonplaats</h4>
+            <p>ingevoerde tekst van de gebruiker...</p>
+            <button class="meer-info">Meer info</button>
+            <div class="skills">
+                <h5>skills</h5>
+                <ul>
+                    <li>Calisthenics</li>
+                    <li>Kracht en Conditie</li>
+                    <li>Revalidatie</li>
+                    <li>Fitness</li>
+                    <li>Yoga</li>
+                    <li>Free Weights</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <img class="round" src="#" alt="gebruiker">
+            <h3>username</h3>
+            <h4>woonplaats</h4>
+            <p>ingevoerde tekst van de gebruiker...</p>
+            <button class="meer-info">Meer info</button>
+            <div class="skills">
+                <h5>skills</h5>
+                <ul>
+                    <li>Calisthenics</li>
+                    <li>Kracht en Conditie</li>
+                    <li>Revalidatie</li>
+                    <li>Fitness</li>
+                    <li>Yoga</li>
+                    <li>Free Weights</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <img class="round" src="#" alt="gebruiker">
+            <h3>username</h3>
+            <h4>woonplaats</h4>
+            <p>ingevoerde tekst van de gebruiker...</p>
+            <button class="meer-info">Meer info</button>
+            <div class="skills">
+                <h5>skills</h5>
+                <ul>
+                    <li>Calisthenics</li>
+                    <li>Kracht en Conditie</li>
+                    <li>Revalidatie</li>
+                    <li>Fitness</li>
+                    <li>Yoga</li>
+                    <li>Free Weights</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <img class="round" src="#" alt="gebruiker">
+            <h3>username</h3>
+            <h4>woonplaats</h4>
+            <p>ingevoerde tekst van de gebruiker...</p>
+            <button class="meer-info">Meer info</button>
+            <div class="skills">
+                <h5>skills</h5>
+                <ul>
+                    <li>Calisthenics</li>
+                    <li>Kracht en Conditie</li>
+                    <li>Revalidatie</li>
+                    <li>Fitness</li>
+                    <li>Yoga</li>
+                    <li>Free Weights</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <img class="round" src="#" alt="gebruiker">
+            <h3>username</h3>
+            <h4>woonplaats</h4>
             <p>ingevoerde tekst van de gebruiker...</p>
             <button class="meer-info">Meer info</button>
             <div class="skills">
