--- a/public/stylesheets/overzicht.css
+++ b/public/stylesheets/overzicht.css
@@ -1,3 +1,5 @@
+
+@media screen and (min-width: 0px) {
 body {
     /* alles in het midden krijgen */
     display: flex;
@@ -24,7 +26,7 @@ p {
 }
 
 .card-container {
-    background-color: gray;
+    background-color: rgb(30, 30, 30);
     border-radius: 10px;
     box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
     color: white;
@@ -50,7 +52,7 @@ p {
 }
 
 .meer-info {
-    background-color: red;
+    background-color: #F5CE67;
     border: 1px solid black;
     border-radius: 3px;
     color: white;
@@ -60,7 +62,7 @@ p {
 }
 
 .skills {
-    background-color: rgb(57, 57, 57);
+    background-color: rgb(48, 48, 48);
     text-align: left;
     padding: 15px;
     margin-top: 30px;
@@ -75,3 +77,22 @@ p {
     margin: 0.3em 0.3em 0 0;
     padding: 5px;
 }
+}
+
+@media screen and (min-width: 770px) {
+    main {
+      margin: 3em 3em 3em 3em;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 3em;
+    }
+  
+    .card-container {
+      flex: 1 1 calc(25% - 3em); /* Adjusts the width of the first four cards */
+    }
+  
+    .card-container:nth-child(n+5) {
+      flex-basis: 100%; /* Makes the cards after the 4th take the full width */
+    }
+  }
+  
