--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,6 +1,40 @@
+/* Fonts */
+
+@font-face {
+    font-family: 'monument extended';
+    src: url(public/stylesheets/fonts/MonumentExtended-Regular.otf);
+    font-style: normal;
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'open sans';
+    src: url(public/stylesheets/fonts/21798841561.ttf);
+    font-style: normal;
+    font-weight: 100;
+}
+
+
+@font-face {
+    font-family: 'open sans bold';
+    src: url(public/stylesheets/fonts/23165521968.ttf);
+    font-style: bold;
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'open sans italics';
+    src: url(public/stylesheets/fonts/20007011713.ttf);
+    font-style: bold;
+    font-weight: 100;
+}
+
+/* ////////////////////////////////////////////////////////////////////// */
+
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -8,11 +42,11 @@ body {
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: open sans, sans-serif;
 }
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: open sans bold, Helvetica, sans-serif;
 }
 
 h2 {
@@ -20,15 +54,15 @@ h2 {
 }
 
 h3 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: open sans bold, sans-serif;
 }
 
 h4 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: open sans bold, sans-serif;
 }
 
 h5 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:open sans bold, sans-serif;
 }
 
 h6 {
@@ -38,6 +72,11 @@ h6 {
 li {
     list-style-type: none;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    color: white;
+   text-decoration: none;
 }
 
 /* button styling */
