--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -10,69 +10,7 @@
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/navbar.css">
     <style>
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            min-height: 100vh;
-            margin: 0;
-        }
 
-        h3 {
-            margin: 10px 0;
-        }
-
-        h5 {
-            margin: 5px 0;
-            text-transform: uppercase;
-        }
-
-        p {
-            font-size: 14px;
-            line-height: 21px;
-        }
-
-        .card-container {
-            background-color: gray;
-            border-radius: 10px;
-            box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
-            color: white;
-            padding-top: 30px;
-            max-width: 300px;
-            text-align: center;
-            margin-bottom: 1em;
-        }
-
-        .card-container .round {
-            border: 2px solid black;
-            background-color: rgb(30, 30, 30);
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0 auto;
-            color: white;
-        }
-
-        @media screen and (min-width: 770px) {
-            main {
-                margin-top: 3em;
-                display: flex;
-                flex-wrap: wrap;
-                gap: 3em;
-            }
-
-            .card-container {
-                flex: 1 1 calc(25% - 3em);
-            }
-
-            .card-container:nth-child(n+5) {
-                flex-basis: 100%;
-            }
-        }
     </style>
 </head>
 
@@ -100,102 +38,50 @@
     </header>
 
     <main>
-        <div class="card-container">
-            <img class="round" src="#" alt="gebruiker">
-            <h3>username</h3>
-            <h4>woonplaats</h4>
-            <p>ingevoerde tekst van de gebruiker...</p>
-            <button class="meer-info">Meer info</button>
-            <div class="skills">
-                <h5>skills</h5>
-                <ul>
-                    <li>Calisthenics</li>
-                    <li>Kracht en Conditie</li>
-                    <li>Revalidatie</li>
-                    <li>Fitness</li>
-                    <li>Yoga</li>
-                    <li>Free Weights</li>
-                </ul>
-            </div>
-        </div>
 
-        <div class="card-container">
-            <img class="round" src="#" alt="gebruiker">
-            <h3>username</h3>
-            <h4>woonplaats</h4>
-            <p>ingevoerde tekst van de gebruiker...</p>
-            <button class="meer-info">Meer info</button>
-            <div class="skills">
-                <h5>skills</h5>
-                <ul>
-                    <li>Calisthenics</li>
-                    <li>Kracht en Conditie</li>
-                    <li>Revalidatie</li>
-                    <li>Fitness</li>
-                    <li>Yoga</li>
-                    <li>Free Weights</li>
-                </ul>
-            </div>
-        </div>
 
-        <div class="card-container">
-            <img class="round" src="#" alt="gebruiker">
-            <h3>username</h3>
-            <h4>woonplaats</h4>
-            <p>ingevoerde tekst van de gebruiker...</p>
-            <button class="meer-info">Meer info</button>
-            <div class="skills">
-                <h5>skills</h5>
-                <ul>
-                    <li>Calisthenics</li>
-                    <li>Kracht en Conditie</li>
-                    <li>Revalidatie</li>
-                    <li>Fitness</li>
-                    <li>Yoga</li>
-                    <li>Free Weights</li>
-                </ul>
-            </div>
-        </div>
+        <ul class="kaarten">
 
-        <div class="card-container">
-            <img class="round" src="#" alt="gebruiker">
-            <h3>username</h3>
-            <h4>woonplaats</h4>
-            <p>ingevoerde tekst van de gebruiker...</p>
-            <button class="meer-info">Meer info</button>
-            <div class="skills">
-                <h5>skills</h5>
-                <ul>
-                    <li>Calisthenics</li>
-                    <li>Kracht en Conditie</li>
-                    <li>Revalidatie</li>
-                    <li>Fitness</li>
-                    <li>Yoga</li>
-                    <li>Free Weights</li>
-                </ul>
-            </div>
-        </div>
+            <li>
+                <a href="#" class="kaart">
+                    <img class="banner" src="/stylesheets/images/shoulder.jpeg" alt="">
+                    <div class="kaart_overlay">
+                        <div class="kaart_header">
+                            <!-- <svg class="arc">   </svg> -->
+                            <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+                            <div class="kaart_header_tekst">
+                                <h3 class="naam">Bert</h3>
+                                <p>beschikbaar op: ma, di , do</p>
+                            </div>
+                        </div>
+                        <div class="skills-container">
+                        <h4>skills</h4>
+                        <ul class="skills">
+                            <li>Calisthenics</li>
+                            <li>Weights</li>
+                            <li>Yoga</li>
+                            <li>Hardlopen</li>
+                            <li>Calisthenics</li>
+                            <li>Weights</li>
+                            <li>Yoga</li>
+                            <li>Hardlopen</li>
+                            <li>Calisthenics</li>
+                            <li>Weights</li>
+                            <li>Yoga</li>
+                            <li>Hardlopen</li>
+                        </ul>
+                    </div>
+                    </div>
+                </a>
+            </li>
+        </ul>
 
-        <div class="card-container">
-            <img class="round" src="#" alt="gebruiker">
-            <h3>username</h3>
-            <h4>woonplaats</h4>
-            <p>ingevoerde tekst van de gebruiker...</p>
-            <button class="meer-info">Meer info</button>
-            <div class="skills">
-                <h5>skills</h5>
-                <ul>
-                    <li>Calisthenics</li>
-                    <li>Kracht en Conditie</li>
-                    <li>Revalidatie</li>
-                    <li>Fitness</li>
-                    <li>Yoga</li>
-                    <li>Free Weights</li>
-                </ul>
-            </div>
-        </div>
 
-        <div class="card-container">
+
+
+
+
+        <!-- <div class="card-container">
             <img class="round" src="#" alt="gebruiker">
             <h3>username</h3>
             <h4>woonplaats</h4>
@@ -212,7 +98,8 @@
                     <li>Free Weights</li>
                 </ul>
             </div>
-        </div>
+        </div> -->
+
 
         <script src="/stylesheets/scripts/overzicht.js"></script>
         <script src="/stylesheets/scripts/index.js"></script>
