--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,30 +1,19 @@
-<h1>Login</h1>
-
-
+<!-- login.ejs -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <title>Login</title>
 </head>
-
 <body>
-    <form action="/login" method="GET">
-        <section>
-            <label for="name">Name</label>
-            <input type="name" id="name" name="name" required>
-        </section>
-        <section>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-        </section>
+    <h1>Login</h1>
+    <form action="/login" method="POST">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required><br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br>
         <button type="submit">Login</button>
     </form>
-    <a href="/register">Register</a>
 </body>
-
 </html>
