fotos van slider toegevoegd en nav bar veranderd

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -228,7 +228,10 @@ nav.visible li:last-child a {
   #nav a {
     line-height: 30vw;
     text-indent: 25vw;
-  
+        position: relative;
+top: 20px; left: -40px;
+   
+  padding: 30px;
   }
 
   .shape-circle {
