zoek filter toegepast

--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -55,25 +55,61 @@
                             </div>
                         </div>
                         <div class="skills-container">
-                        <h4>skills</h4>
-                        <ul class="skills">
-                            <li>Calisthenics</li>
-                            <li>Weights</li>
-                            <li>Yoga</li>
-                            <li>Hardlopen</li>
-                            <li>Calisthenics</li>
-                            <li>Weights</li>
-                            <li>Yoga</li>
-                            <li>Hardlopen</li>
-                            <li>Calisthenics</li>
-                            <li>Weights</li>
-                            <li>Yoga</li>
-                            <li>Hardlopen</li>
-                        </ul>
-                    </div>
+                            <h4>skills</h4>
+                            <ul class="skills">
+                                <li>Calisthenics</li>
+                                <li>Weights</li>
+                                <li>Yoga</li>
+                                <li>Hardlopen</li>
+                                <li>Calisthenics</li>
+                                <li>Weights</li>
+                                <li>Yoga</li>
+                                <li>Hardlopen</li>
+                                <li>Calisthenics</li>
+                                <li>Weights</li>
+                                <li>Yoga</li>
+                                <li>Hardlopen</li>
+                            </ul>
+                        </div>
                     </div>
                 </a>
             </li>
+
+
+            <li>
+                <a href="#" class="kaart">
+                    <img class="banner" src="/stylesheets/images/shoulder.jpeg" alt="">
+                    <div class="kaart_overlay">
+                        <div class="kaart_header">
+                            <!-- <svg class="arc">   </svg> -->
+                            <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+                            <div class="kaart_header_tekst">
+                                <h3 class="naam">Bert</h3>
+                                <p>beschikbaar op: ma, di , do</p>
+                            </div>
+                        </div>
+                        <div class="skills-container">
+                            <h4>skills</h4>
+                            <ul class="skills">
+                                <li>Calisthenics</li>
+                                <li>Weights</li>
+                                <li>Yoga</li>
+                                <li>Hardlopen</li>
+                                <li>Calisthenics</li>
+                                <li>Weights</li>
+                                <li>Yoga</li>
+                                <li>Hardlopen</li>
+                                <li>Calisthenics</li>
+                                <li>Weights</li>
+                                <li>Yoga</li>
+                                <li>Hardlopen</li>
+                            </ul>
+                        </div>
+                    </div>
+                </a>
+            </li>
+
+
         </ul>
 
 
