specifieker nav bar gemaakt

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -27,8 +27,8 @@ body {
   position: absolute;
 }
 
-span::before,
-span::after {
+.bars span::before,
+.bars span::after {
   content: "";
   display: block;
   background-color: #fff;
